--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^4.0.1"
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^4.0.1",
+    "style-loader": "^1.1.3"
   }
 }
